--- a/assets/cs/style.css
+++ b/assets/cs/style.css
@@ -420,6 +420,38 @@ html{
   bottom: 20%;
   left: 18%;
 }
+/* Contact us Page style  */
+.contact-bg{
+  background-color: var(--gray-200);
+}
+.my-label{
+  color: var(--gray-700);
+}
+.my-btn{
+  width: 30%;
+  border-radius: 20px !important;
+  margin-left: 20px;
+}
+/* gallery page style  */
+.gw-img img:hover{
+  transition: 1s;
+  transform: scale(1.2);
+}
+/* services section style */
+.services-bg{
+  background-color: var(--gray-100);
+}
+.my-services .card:hover{
+  box-shadow: 0px 0px 40px var(--gray-400);
+  transition: 0.4s;
+}
+#p-title{
+  font-size: 12px;
+  color: var(--gray-600);
+}
+#btn-group{
+  margin-left: 38%;
+}
 /*?----------{  Add Description  }----------?*/
 
 
