--- a/assets/cs/style.css
+++ b/assets/cs/style.css
@@ -400,25 +400,55 @@ html{
   background-color: #fae2e2;
 }
 /* Photo-gaper section  */
-.demo img {
-  height: 28opx;
+.card-bg img {
+  height: 320px;
   width: 100%;
+  display: block;
 }
-.bg-img{
+
+.img-bg {
   position: relative;
   overflow: hidden;
 }
-.hidden-icon{
-  position: absolute;
-  z-index: -1;
-  bottom: 20%;
-  left: 18%;
-  transition: 0.4s;
+
+.img-bg img {
+  transition: transform 0.3s ease;
 }
-.bg-img:hover .hidden-icon{
+
+.img-bg::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.4); /* কালার এবং অপাসিটি */
+  opacity: 0;
+  transition: opacity 0.3s ease;
+  z-index: 1;
+}
+
+.img-bg:hover::before {
+  opacity: 1;
+}
+
+.img-bg:hover img {
+  transform: scale(1.2);
+}
+
+/* Hidden Icon Styling */
+.hidden-icon {
+  position: absolute;
+  bottom: 30px;
+  left: 6%;
+  /* transform: translate(-50%, -50%); */
+  opacity: 0;
   z-index: 2;
-  bottom: 20%;
-  left: 18%;
+  transition: opacity 0.3s ease;
+}
+
+.img-bg:hover .hidden-icon {
+  opacity: 1;
 }
 /* Contact us Page style  */
 .contact-bg{
