--- a/assets/cs/style.css
+++ b/assets/cs/style.css
@@ -240,7 +240,7 @@ html{
   right: 10px;
 }
 .big-img:hover .hidden-text{
-  color: #fff;
+  color: var(--gray-100);
   z-index: 1;
   bottom: 40px;
   left: 40px;
@@ -268,6 +268,76 @@ html{
 /*? feedback section style  */
 #pera{
   font-size: 14px;
+}
+/* progress bar section  */
+.progress{
+  height: 12px !important;
+}
+.progress-label{
+  margin-left: 20px;
+}
+#progress-bar-1{
+  background: linear-gradient(to left, #00ffff, #33ccff);
+}
+#progress-bar-2{
+  background: linear-gradient(to left, #ff99cc, #ff0066);
+}
+#progress-bar-3{
+  background: linear-gradient(to left, #ccff66, #00cc00);
+}
+#progress-bar-4{
+  background: linear-gradient(to left, #ccff66, #ff6600);
+}
+/* testimonial style  */
+.feedback-items{
+  position: relative;
+}
+.feedback-sub-heading{
+  font-family: var(--font-3);
+  color: var(--gray-700);
+  font-size: 20px;
+  text-align: center !important;
+}
+.b-color{
+  border: 2px solid rgb(194, 67, 116);
+}
+#member-1{
+  border: 4px solid rgb(233, 22, 22);
+}
+#member-2{
+  height: 100px;
+  position: absolute;
+  top: 1px;
+}
+#member-3{
+  height: 130px;
+  position: absolute;
+  top: 25%;
+  left: 10%;
+}
+#member-5{
+  height: 100px;
+  position: absolute;
+  bottom: 3%;
+  left: 5%;
+}
+#member-4{
+  height: 100px;
+  position: absolute;
+  top: 1px;
+  right: 1px;
+}
+#member-6{
+  height: 130px;
+  position: absolute;
+  top: 25%;
+  right: 10%;
+}
+#member-7{
+  height: 110px;
+  position: absolute;
+  bottom: 5%;
+  right: 5%;
 }
 /* Add section style  */
 #my-btn-1{
@@ -395,6 +465,21 @@ html{
 .icon-1{
   font-size: 20px;
 }
+/* aside style  */
+aside{
+  background-image: url('../img/bg.jpg');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+  height: 60vh;
+}
+.aside-items{
+  color: var(--white);
+  display: flex;
+  align-items: center;
+  height: 60vh;
+}
 /* Photo-gaper section style  */
 .bg-gaper{
   background-color: #fae2e2;
@@ -405,16 +490,13 @@ html{
   width: 100%;
   display: block;
 }
-
 .img-bg {
   position: relative;
   overflow: hidden;
 }
-
 .img-bg img {
   transition: transform 0.3s ease;
 }
-
 .img-bg::before {
   content: "";
   position: absolute;
